# polaris

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CmakeLists.txt  Polaris.sln  ProjectUserTemplate.vcxproj  README  README.md  all.props  build-polaris.cmd  build.bat  cmake_build.bat  configure-and-build-polaris.cmd  configure-polaris.cmd  configure-polaris.sh  configure_polaris.cmd  configure_polaris.sh  jenkins-build.cmd  makefile  odb-step.props  run_cmake.bat  run_tests.cmd  set-cfg.cmd
Antares/: Antares.cpp  Antares.h  Antares.vcxproj  Antares.vcxproj.filters  Antares_Advisory_ITS_Implementation.h  Antares_Advisory_Radio_Implementation.h  Antares_App.h  Antares_Depot_Implementation.h  Antares_Frame.h  Antares_Frame_Implementation.h  Antares_Incident_Implementation.h  Antares_Includes.h  Antares_Intersection_Implementation.h  Antares_Layer.h  Antares_Layer_Implementation.h  Antares_Link_Control_Implementation.h  Antares_Link_Implementation.h  Antares_Network_Event_Implementation.h  Antares_Network_Implementation.h  Antares_Person_Data_Logger.h  Antares_Ramp_Metering_Implementation.h  Antares_Sensor_Implementation.h  Antares_Traffic_Management_Center_Implementation.h  Antares_Variable_Message_Sign_Implementation.h  Antares_Variable_Speed_Sign_Implementation.h  Antares_Vehicle_Implementation.h  Attributes_Panel.h  Attributes_Panel_Implementation.h  CMakeLists.txt  Canvas.h  Canvas_Implementation.h  Conductor.h  Conductor_Implementation.h  Control_Dialog.h  Control_Dialog_Implementation.h  Control_Panel.h  Control_Panel_Implementation.h  Draw_Layer.h  Draw_Layer_2D.h  Draw_Network.h  (+23 more)
Application/: Antares_Example.cpp  Application.cpp  Application.vcxproj  Application.vcxproj.filters  Application_Includes.h  CMakeLists.txt  Engine_Tests.cpp  Example.cpp  Integrated_Model.cpp  Model_Selection.h  NetworkModel.cpp  Polaris_PCH.cpp  Polaris_PCH.h  PopSyn_Example.cpp  Sensor_Model.cpp  makefile  makefile_integrated  scenario.json
Core/: Basic_Concepts.h  CMakeLists.txt  Concepts.h  Containers.h  Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  Core_Includes.h  Data_Engine.h  Data_Object.h  Data_Structures.h  Double_Buffer.h  Execution_Detail.h  Execution_Engine.h  Execution_Object.h  Facets.h  Features.h  Generic.h  Grouping.h  Interprocess.h  Interprocess_Engine.h  Interprocess_Structures.h  Memory_Detail.h  Memory_Engine.h  Min_Pool.h  Multi_Buffer.h  Polaris_Component.h  Polaris_Variables.h  Quick_List.h  Quick_Stack.h  Run_Parameters.h  State_Checking.h  Typed_Data_Page.h  Typed_Execution_Page.h  World.h  m_array.h  s_array.h
Development Documents/: Bug Tracking Core.txt  Requested Functionality Core General.txt  Requested Functionality Meta Structures.txt
File_IO/: CMakeLists.txt  File_IO.vcxproj  File_IO.vcxproj.filters  RngStream.cpp  RngStream.h  makefile  network_activity_location_data.h  network_assignment_models.h  network_data.cpp  network_data.h  network_demand_data.cpp  network_demand_data.h  network_information.cpp  network_information.h  network_link_data.h  network_link_management_data.h  network_models.h  network_node_control_data.h  network_node_data.h  network_operation_data.cpp  network_operation_data.h  network_scenario_data.cpp  network_scenario_data.h  network_turn_movement_data.h  network_vehicle_data.cpp  network_vehicle_data.h  network_zone_data.h  utilities.cpp  utilities.h
Io/: CMakeLists.txt  Control.h  Demand-odb.cxx  Demand-odb.hxx  Demand-odb.ixx  Demand.h  Dimensions.h  Geometry.h  Io-mt.vcxproj.filters  Io.h  Its.h  Makefile  Network_Event.h  Network_IO-odb.hxx  Network_IO.h  Polaris_IO.vcxproj  Polaris_IO.vcxproj.filters  README  Result-odb.cxx  Result-odb.hxx  Result-odb.ixx  Result.h  Supply-odb.cxx  Supply-odb.hxx  Supply-odb.ixx  Supply.h  (+12 more)
Scenario_Manager/: CMakeLists.txt  Scenario_Manager.vcxproj  Scenario_Manager.vcxproj.filters  cfg_reader.cpp  cfg_reader.h  makefile
Scenario_Manager/scripts/: delall  weather_submit.py
Scenario_Manager/scripts/scenario_comprehensive/: plot_vht_across
Scenario_Manager/scripts/scenario_comprehensive/common/: deljobs  monitor  plot_vmt_bar_chart  weather_prepare.py  weather_scenarios.json  weather_submit.py
Scenario_Manager/scripts/scenario_representative/: plot_speed_across  prepare_scenarios
Scenario_Manager/scripts/scenario_representative/common/: avg_moe_across_scenarios.py  display  hourly_demand_arrival.awk  monitor  plot_all  plot_hourly_demand_arrival  plot_speed  plot_vht_bar_chart  plot_vmt_bar_chart  vht_bar_chart.plt  vmt_bar_chart.plt  weather_model.py  weather_prepare.py  weather_probability.py
apps/fixed_demand_simulator/: Application_Includes.h  CMakeLists.txt  NetworkModel.cpp  Polaris_PCH.h
apps/integrated_abm/: Application_Includes.h  CMakeLists.txt  Coordinated_Platooning.h  Coordinated_Platooning_Implementations.h  Coordinated_Platooning_Prototype.h  Integrated_Model.cpp  Person_Platooning_Implementations.h  Person_Platooning_Prototype.h  Polaris_PCH.h  Vehicle_Platooning_Implementations.h  Vehicle_Platooning_Prototype.h
apps/integrated_capacity_based_model/: CMakeLists.txt  Car.cpp  Car.h  CarManager.cpp  CarManager.h  CarType.cpp  CarType.h  CommonQueue.cpp  CommonQueue.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  IndividualQueue.cpp  IndividualQueue.cpp.old  IndividualQueue.h  Intersection.cpp  Intersection.h  JunctionArea.cpp  JunctionArea.h  Polaris_PCH.h  ReadOutput.py  Road.cpp  Road.h  RoadNetwork.cpp  RoadNetwork.h  TravelingArea.cpp  TravelingArea.h  guiQueueSimulation.py  guiSimulation.pyw  guiSimulationCommonQueueDebug.pyw  main.cpp
apps/platooning_preprocessor/: CMakeLists.txt  Platooning_Preprocessor.cpp  platooning_preprocessor_Implementation.h  platooning_preprocessor_Prototype.h
apps/randy_test/: CMakeLists.txt  Test.cpp  forms.h  myAgent.h  myStuff.cpp  myStuff.h  myclock.h  version.h
apps/test/: CMakeLists.txt  Test.cpp
apps/transims2polaris/: CMakeLists.txt  adopter_methods.h  convert_methods.h  transims2polaris.cpp
libs/io/: CMakeLists.txt  Database.h  Demand.h  Io_db.h  Popsyn.h  Result.h  Supply.h  gams.h
(+1269 files in other folders)
