file(GLOB_RECURSE hppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)	
file(GLOB_RECURSE cppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)	
add_executable(Fixed_Demand_Simulator NetworkModel.cpp)
if (MSVC AND Antares)
	target_link_libraries(Fixed_Demand_Simulator ${libtcmalloc} ${antareslibs} ${iolibs} Scenario_Manager Core Routing Visual_Traffic_Simulator)
elseif(UNIX)
	target_link_libraries(Fixed_Demand_Simulator ${libtcmalloc} ${antareslibs} ${iolibs} rt Scenario_Manager Core Routing)
else()
	target_link_libraries(Fixed_Demand_Simulator ${libtcmalloc} ${antareslibs} ${iolibs} Scenario_Manager Core Routing)
endif()

set_target_properties(Fixed_Demand_Simulator PROPERTIES FOLDER apps)