file(GLOB_RECURSE hppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)	
file(GLOB_RECURSE cppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)	
set(MODULE_NAME Fixed_Demand_Simulator)
add_executable(${MODULE_NAME} NetworkModel.cpp)
if (MSVC AND Antares)
	target_link_libraries(${MODULE_NAME} ${libtcmalloc} ${antareslibs} ${iolibs} Scenario_Manager Core Routing Visual_Traffic_Simulator)
elseif(UNIX)
	target_link_libraries(${MODULE_NAME} ${libtcmalloc} ${antareslibs} ${iolibs} rt Scenario_Manager Core Routing)
else()
	target_link_libraries(${MODULE_NAME} ${libtcmalloc} ${antareslibs} ${iolibs} Scenario_Manager Core Routing)
endif()

set_target_properties(${MODULE_NAME} PROPERTIES FOLDER apps)

if(MSVC)
	# Configure the template file
	MESSAGE(INFO " ${MODULE_NAME} - DEPS_BINARY_DIR=${DEPS_BINARY_DIR}")
	SET(USER_FILE ${MODULE_NAME}.vcxproj.user)
	SET(OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/${USER_FILE})
	CONFIGURE_FILE(../../ProjectUserTemplate.vcxproj ${USER_FILE})
endif()