file(GLOB_RECURSE hppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)	
file(GLOB_RECURSE cppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)	
add_executable(Platooning_Preprocessor ${cppfiles} ${hppfiles})
target_link_libraries(Platooning_Preprocessor ${libtcmalloc} ${iolibs} Scenario_Manager Core Routing)
set_target_properties(Platooning_Preprocessor PROPERTIES FOLDER apps)